resolve test failures in the discovery feature integration, add discovery feature in aas registry variations